# Midi-to-WAV-Synthesizer-V4

./: CMakeLists.txt  README.md  event.cpp  event.hpp  instrument.cpp  instrument.hpp  main.cpp  message_queue.cpp  message_queue.hpp  midiplayer.cpp  midiplayer.hpp  noise_generator.cpp  shared_double_buffer.cpp  shared_double_buffer.hpp  signal.cpp  signal.hpp  synthesizer.cpp  synthesizer.hpp  test0.mid  test_midiplayer.cpp  track.cpp  track.hpp  wav.cpp  wav.hpp
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
